# gcleaner-python

./: .gitignore  AUTHORS  CMakeLists.txt  INSTALL  README.md
data/: gcleaner.desktop  gtk-widgets-gcleaner.css
data/schemas/: CMakeLists.txt  org.gcleaner.gschema.xml
src/: GCleaner  app.py  constants.py  gcleaner_window.py
src/plugins/: trash.py
src/widgets/: about.py  header_bar.py  sidebar.py  toolbar.py
